Fixing issues realted to logging 15807 & 16451.
svn path=/branches/3.1.1/; revision=47463


Former-commit-id: f8fb77198b1141107ad96d1769a45d5618e35d14